--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "devDependencies": {
     "beautify-benchmark": "^0.2.4",
-    "benchmark": "^2.1.1",
-    "bluebird": "^3.4.1",
+    "benchmark": "^2.1.2",
+    "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "echint": "^1.5.3",
-    "simon-promise": "^1.0.0",
-    "standard": "^8.5.0"
+    "snazzy": "^5.0.0"
+  },
+  "dependencies": {
+    "smart-promise": "^1.0.0"
   }
 }
